# mcp-web-search

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/forge_mcp_web_search/: __init__.py  __main__.py  server.py
src/forge_mcp_web_search/search/: __init__.py  client.py  models.py
tests/: __init__.py  conftest.py  fixtures.py  test_client.py  test_server.py
